[package]
name = "rust-motherload"
version = "0.1.0"
authors = ["Robaire Galliath <galliath.robaire@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4.14"
simplelog = "^0.10.0"
gl = "^0.14.0"
sdl2 = "^0.34.0"
rand = { version = "^0.8.0", features = ["small_rng"] }
image = "^0.23.0"
nalgebra = "^0.25.0"
freetype-rs = "^0.27.0"

